spacing fixes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -589,6 +589,20 @@ body {
   font-family: var(--font-sans);
 }
 
+body,
+body * {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+}
+
+img,
+svg,
+video {
+  -webkit-user-drag: none;
+  user-select: none;
+}
+
 @media (pointer: fine) {
 
   *,
